; ModuleID = '/home/carl/AnghaBench/radare2/libr/anal/p/extr_anal_sysz.c_archinfo.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/anal/p/extr_anal_sysz.c_archinfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @archinfo to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @archinfo(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %10 [
    i32 130, label %7
    i32 129, label %8
    i32 128, label %9
  ]

7:                                                ; preds = %2
  store i32 2, i32* %3, align 4
  br label %11

8:                                                ; preds = %2
  store i32 4, i32* %3, align 4
  br label %11

9:                                                ; preds = %2
  store i32 2, i32* %3, align 4
  br label %11

10:                                               ; preds = %2
  store i32 2, i32* %3, align 4
  br label %11

11:                                               ; preds = %10, %9, %8, %7
  %12 = load i32, i32* %3, align 4
  ret i32 %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
